# retroquest

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile  package-lock.json  package.json  pnpm-lock.yaml  program-id.json
crates/session-keys/: Cargo.toml
crates/session-keys/docs/: DESIGN.md
crates/session-keys/src/: lib.rs
docs/: SESSION_KEYS_UX.md  SOLANA_INTEL_MAC_SETUP.md
docs/product/: README.md  action-items-vision.md  retrospective-flow.md
idl/: retroquest.json
programs/retroquest/: CLAUDE.md  Cargo.toml
programs/retroquest/src/: constants.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs  processor.rs  state.rs
programs/retroquest/src/instructions/: group.rs  mod.rs  note.rs  participant.rs  registry.rs  session.rs  vote.rs
programs/retroquest/src/state/: allowlist.rs  group.rs  mod.rs  note.rs  participant.rs  retro_session.rs  team_registry.rs  vote.rs
scripts/: update-program-id.sh
tests/: CLAUDE.md  action-items.test.ts  bankrun.test.ts  identity.test.ts  retroquest.ts
tests/helpers/: instructions.ts  pda.ts
ui/: CLAUDE.md  package-lock.json  package.json  tailwind.config.js
ui/public/: index.html
ui/src/: App.tsx  debug-participant-entry.ts  debug-session.ts  index.css  index.tsx  polyfills.ts  react-app-env.d.ts
ui/src/components/: BoardList.tsx  BoardView.tsx  CreateBoard.tsx  CreateSession.tsx  EnableSmoothModeModal.tsx  GroupCard.tsx  Header.tsx  IdentityModal.tsx  NoteCard.tsx  PdaExplorerPage.tsx  SessionList.tsx  SessionStatus.tsx  SessionView.tsx  UsernameDisplay.tsx  WalletProvider.tsx
ui/src/components/stages/: DiscussStage.tsx  GroupStage.tsx  SetupStage.tsx  VoteStage.tsx  WriteNotesStage.tsx
ui/src/contexts/: IdentityContext.tsx  SessionContext.tsx
ui/src/hooks/: useBoard.ts  useProgram.ts  useSession.ts
ui/src/types/: index.ts
ui/src/utils/: deserialize.ts  instructions.ts  pda.ts
