[package]
name = "retroquest"
version = "0.1.0"
description = "Solana-native retrospective application"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "retroquest"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
