[package]
name = "retroquest"
version = "0.1.0"
description = "Solana-native retrospective application"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "retroquest"

[features]
default = []
no-entrypoint = []

[dependencies]
solana-program = "2.0"
borsh = "0.10"
thiserror = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
