[package]
name = "retroquest"
version = "0.1.0"
description = "Solana-native retrospective application"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "retroquest"

[features]
default = []
no-entrypoint = []

[dependencies]
solana-program = "2.0"
borsh = "0.10"
thiserror = "1.0"
# Pin indexmap to version compatible with Solana's rustc 1.79
indexmap = "=2.2.6"
session-keys = { path = "../../crates/session-keys", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
